--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,8 +1,3 @@
-<div class="embed-container">
-    <iframe width="560"
-    height="315"
-    frameborder="0"
-    allowfullscreen
-    [src]="youtubeSafeUrl">
-</iframe>
+<div>
+    <iframe width="500" height="500" [src]="'http://www.youtube.com/embed/W7qWa52k-nE' | youtubeSafeUrl"></iframe>  
 </div>
