--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,3 +1,4 @@
 <div>
-    <iframe width="500" height="500" [src]="'http://www.youtube.com/embed/W7qWa52k-nE' | youtubeSafeUrl"></iframe>  
+    <iframe width="500" height="500" [src]="'http://www.youtube.com/embed/`${video.id.videoId}`' | youtubeSafeUrl"></iframe>  
+    
 </div>
