--- a/src/app/components/video-list/video-list.component.html
+++ b/src/app/components/video-list/video-list.component.html
@@ -9,7 +9,7 @@
   </header>
   <div class="row">
     <div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
-       <app-video-player></app-video-player>
+       <app-video-player [videos]="videos"></app-video-player>
       <div class="card border-0 shadow vh-50">
         <a
           href="https://www.youtube.com/watch?v={{ video.id.videoId }}"
