--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,4 +1,3 @@
-<div>
-    <iframe width="500" height="500" [src]="'http://www.youtube.com/embed/`${video.id.videoId}`' | youtubeSafeUrl"></iframe>  
-    
+<div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
+  <iframe width="500" height="500" [src]="iframeUrl | youtubeSafeUrl"></iframe>
 </div>
