--- a/src/app/components/video-list/video-list.component.html
+++ b/src/app/components/video-list/video-list.component.html
@@ -1,26 +1,15 @@
-<div class="container">
-  <header class="bg-success text-center p-2  py-3 mb-4">
-    <div class="container">
-      <h1 class="font-weight-light text-white">
-        <i class="fab fa-youtube"></i>
-        <a class="text-white" href="#">YOUTUBE APP</a>
-      </h1>
+<div class="row item">
+  <div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
+    <div class="card border-0 shadow vh-50">
+      <a
+        href="https://www.youtube.com/watch?v={{ video.id.videoId }}"
+        target="_blank"
+      >
+        <img
+          [src]="video.snippet.thumbnails.medium.url"
+          class="card-img-top"
+          alt="..."
+      /></a>
     </div>
-  </header>
-  <div class="row">
-    <div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
-      <div class="card border-0 shadow vh-50">
-        <a
-          href="https://www.youtube.com/watch?v={{ video.id.videoId }}"
-          target="_blank"
-        >
-          <img
-            [src]="video.snippet.thumbnails.medium.url"
-            class="card-img-top"
-            alt="..."
-        /></a>
-      </div>
-    </div>
-    <!-- /.row -->
   </div>
 </div>
