--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <app-video-list></app-video-list>
-  <app-video-details></app-video-details>
+  <app-video-player></app-video-player>
+<!--  <app-video-list></app-video-list>-->
+<!--  <app-video-details></app-video-details>-->
 </div>
