--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
-  <iframe width="500" height="500" [src]="iframeUrl | youtubeSafeUrl"></iframe>
+<div *ngFor="let video of videos">
+  <iframe width="500" height="500" [src]="  |  youtubeSafeUrl"></iframe>
 </div>
