--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let video of videos">
-  <iframe width="500" height="500" [src]="  |  youtubeSafeUrl"></iframe>
+  <iframe width="500" height="500" [src]=" iframeUrl|  youtubeSafeUrl"></iframe>
 </div>
