--- a/src/app/components/video-list/video-list.component.html
+++ b/src/app/components/video-list/video-list.component.html
@@ -11,5 +11,6 @@
           alt="..."
       /></a>
     </div>
+    <button (click)="setUrl('https://www.youtube.com/watch?v' + video.id.videoId)">Set URL</button>
   </div>
 </div>
