--- a/src/app/components/video-details/video-details.component.html
+++ b/src/app/components/video-details/video-details.component.html
@@ -1,4 +1,5 @@
-<div class="item row">
+<div *ngFor="let video of videos" class="col-xl-3 col-md-6 mb-4">
+  <div class="item row">
     <a href="https://www.youtube.com/watch?v={{ video.id.videoId }}"
       >{{ video.snippet.title }}
     </a>
@@ -6,4 +7,4 @@
       {{ video.snippet.description.slice(0, 100) }}
     </div>
   </div>
-
+</div>
