--- a/src/app/components/video-list/video-list.component.html
+++ b/src/app/components/video-list/video-list.component.html
@@ -10,7 +10,9 @@
           class="card-img-top"
           alt="..."
       /></a>
-    </div>
+      <!-- </div>
     <button (click)="setUrl('https://www.youtube.com/watch?v' + video.id.videoId)">Set URL</button>
+  </div> -->
+    </div>
   </div>
 </div>
