--- a/src/app/components/video-player/video-player.component.html
+++ b/src/app/components/video-player/video-player.component.html
@@ -1,3 +1,3 @@
-<!-- <iframe width="500" height="500" [src]=" iframeUrl |  youtubeSafeUrl"></iframe> -->
+<iframe width="500" height="500" [src]=" iframeUrl |  youtubeSafeUrl"></iframe> 
 <span>{{ iframeUrl }}</span>
-<!-- <button (click)="updateUrl()">Update Url</button> -->
+<button (click)="updateUrl()">Update Url</button>
